# bevy_bitgrid_spatial

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: spatial_hash_bench.rs
src/: lib.rs  query_builder.rs  spatial_hash.rs
src/spatial_hash/: entity.rs  mod.rs  query.rs  static_layer.rs
