[package]
name = "bevy_bitgrid_spatial"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A spatial hash for Bevy using bitgrid for efficient spatial indexing."
repository = "https://github.com/sanokata/bevy_bitgrid_spatial"

[dependencies]
bitgrid = { git = "https://github.com/sanokata/bitgrid.rs", branch = "master" }
hashbrown = "0.15"
ahash = "0.8"
smallvec = "1.13"

[features]
bevy = ["dep:bevy"]

[dependencies.bevy]
version = "0.18.1"
optional = true

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "spatial_hash_bench"
harness = false
